--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				type: "line",
 				xValueType: "dateTime",
 				showInLegend: true,
-				name: "Feeder Work Time",
+				name: "Power",
 				dataPoints: dataPoints1
 			}],
                         legend:{
