--- a/index.html
+++ b/index.html
@@ -5,59 +5,219 @@
     <title>NPBC-Monitor</title>
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-
     <script type="text/javascript">
 	window.onload = function () {
 
 		// dataPoints
-		var dataPoints1 = [];
+	    var dataPointsPower = [];
+	    var dataPointsFlame = [];
+	    var dataPointsTset = [];
+	    var dataPointsTboiler = [];
+	    var dataPointsThermostatStop = [];
 
-		var chart = new CanvasJS.Chart("chartContainer",{
-			zoomEnabled: true,
-			title: {
-				text: ""
-			},
-			toolTip: {
-				shared: true
+	    $('#chartContainer').bind('mousemove touchmove touchstart', function (e) {
+	        var chart,
+                point,
+                i,
+                event;
 
-			},
-			legend: {
-				verticalAlign: "top",
-				horizontalAlign: "center",
-                                fontSize: 14,
-				fontWeight: "bold",
-				fontFamily: "calibri",
-				fontColor: "dimGrey"
-			},
-			data: [{
-				type: "line",
-				xValueType: "dateTime",
-				showInLegend: true,
-				name: "Power",
-				dataPoints: dataPoints1
-			}],
-            legend:{
-                cursor:"pointer",
-                itemclick : function(e) {
-                if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-                    e.dataSeries.visible = false;
-                }
-                else {
-                    e.dataSeries.visible = true;
-                }
-                chart.render();
-                }
-            }
-		});
+	        for (i = 0; i < Highcharts.charts.length; i = i + 1) {
+	            chart = Highcharts.charts[i];
+	            event = chart.pointer.normalize(e.originalEvent); // Find coordinates within the chart
+	            point = chart.series[0].searchPoint(event, true); // Get the hovered point
+
+	            if (point) {
+	                point.highlight(e);
+	            }
+	        }
+	    });
+	    /**
+         * Override the reset function, we don't need to hide the tooltips and crosshairs.
+         */
+	    Highcharts.Pointer.prototype.reset = function () {
+	        return undefined;
+	    };
+
+	    /**
+         * Highlight a point by showing tooltip, setting hover state and draw crosshair
+         */
+	    Highcharts.Point.prototype.highlight = function (event) {
+	        this.onMouseOver(); // Show the hover marker
+	        this.series.chart.tooltip.refresh(this); // Show the tooltip
+	        this.series.chart.xAxis[0].drawCrosshair(event, this); // Show the crosshair
+	    };
+
+	    /**
+         * Synchronize zooming through the setExtremes event handler.
+         */
+	    function syncExtremes(e) {
+	        var thisChart = this.chart;
+
+	        if (e.trigger !== 'syncExtremes') { // Prevent feedback loop
+	            Highcharts.each(Highcharts.charts, function (chart) {
+	                if (chart !== thisChart) {
+	                    if (chart.xAxis[0].setExtremes) { // It is null while updating
+	                        chart.xAxis[0].setExtremes(e.min, e.max, undefined, false, { trigger: 'syncExtremes' });
+	                    }
+	                }
+	            });
+	        }
+	    }
+
+	    // Get the data. The contents of the data file can be viewed at
+	    // https://github.com/highcharts/highcharts/blob/master/samples/data/activity.json
+	    $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=activity.json&callback=?', function (activity) {
+	        $.each(activity.datasets, function (i, dataset) {
+
+	            // Add X values
+	            dataset.data = Highcharts.map(dataset.data, function (val, j) {
+	                return [activity.xData[j], val];
+	            });
+
+	            $('<div class="chart">')
+                    .appendTo('#chartContainer')
+                    .highcharts({
+                        chart: {
+                            marginLeft: 40, // Keep all charts left aligned
+                            spacingTop: 20,
+                            spacingBottom: 20
+                        },
+                        title: {
+                            text: dataset.name,
+                            align: 'left',
+                            margin: 0,
+                            x: 30
+                        },
+                        credits: {
+                            enabled: false
+                        },
+                        legend: {
+                            enabled: false
+                        },
+                        xAxis: {
+                            crosshair: true,
+                            events: {
+                                setExtremes: syncExtremes
+                            },
+                            labels: {
+                                format: '{value} km'
+                            }
+                        },
+                        yAxis: {
+                            title: {
+                                text: null
+                            }
+                        },
+                        tooltip: {
+                            positioner: function () {
+                                return {
+                                    x: this.chart.chartWidth - this.label.width, // right aligned
+                                    y: -1 // align to title
+                                };
+                            },
+                            borderWidth: 0,
+                            backgroundColor: 'none',
+                            pointFormat: '{point.y}',
+                            headerFormat: '',
+                            shadow: false,
+                            style: {
+                                fontSize: '18px'
+                            },
+                            valueDecimals: dataset.valueDecimals
+                        },
+                        series: [{
+                            data: dataset.data,
+                            name: dataset.name,
+                            type: dataset.type,
+                            color: Highcharts.getOptions().colors[i],
+                            fillOpacity: 0.3,
+                            tooltip: {
+                                valueSuffix: ' ' + dataset.unit
+                            }
+                        }]
+                    });
+	        });
+	    });
+
+		//var chart = new CanvasJS.Chart("chartContainer",{
+		//	zoomEnabled: true,
+		//	title: {
+		//		text: ""
+		//	},
+		//	toolTip: {
+		//		shared: true
+		//	},
+		//	legend: {
+		//		verticalAlign: "top",
+		//		horizontalAlign: "center",
+        //                        fontSize: 14,
+		//		fontWeight: "bold",
+		//		fontFamily: "calibri",
+		//		fontColor: "dimGrey"
+		//	},
+		//	axisY: [{
+		//	    title: "1st Primary Y Axis"
+		//	}, {
+        //        title: "2nd Primary Y Axis"
+		//	}, {
+		//	    title: "3rd Primary Y Axis"
+		//	}],
+		//	data: [{
+		//		type: "line",
+		//		xValueType: "dateTime",
+		//		showInLegend: true,
+		//		name: "Power",
+		//		dataPoints: dataPointsPower
+		//	}, {
+		//	    type: "line",
+		//	    axisYIndex: 1,
+		//	    xValueType: "dateTime",
+		//	    showInLegend: true,
+		//	    name: "Flame",
+		//	    dataPoints: dataPointsFlame
+		//	}, {
+		//	    type: "line",
+		//	    axisYIndex: 2,
+		//	    xValueType: "dateTime",
+		//	    showInLegend: true,
+		//	    name: "Tset",
+		//	    dataPoints: dataPointsTset
+		//	}, {
+		//	    type: "line",
+		//	    axisYIndex: 2,
+		//	    xValueType: "dateTime",
+		//	    showInLegend: true,
+		//	    name: "Tboiler",
+		//	    dataPoints: dataPointsTboiler
+		//	}, {
+		//	    type: "line",
+		//	    xValueType: "dateTime",
+		//	    showInLegend: true,
+		//	    name: "ThermostatStop",
+		//	    dataPoints: dataPointsThermostatStop
+		//	}],
+        //    legend:{
+        //        cursor:"pointer",
+        //        itemclick : function(e) {
+        //        if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+        //            e.dataSeries.visible = false;
+        //        }
+        //        else {
+        //            e.dataSeries.visible = true;
+        //        }
+        //        chart.render();
+        //        }
+        //    }
+		//});
 
 		var updateInterval = 5000;
 
 		var updateInfo = function () {
 		    $.getJSON("/api/getInfo", function (data) {
-		        $('#spFlame').text(data[0].Flame);
+		        $('#spFlame').text(data.Flame);
 
 		        var power = '';
-		        switch (data[0].Power) {
+		        switch (data.Power) {
 		            case 0: power = ''; break;
 		            case 1: power = 'Suspend'; break;
 		            case 2: power = 'Power 1'; break;
@@ -66,7 +226,7 @@
 		        };
 
 		        var status = '';
-		        switch (data[0].Status) {
+		        switch (data.Status) {
 		            case 0: status = 'Idle'; break;
 		            case 1: status = 'Fan Cleaning'; break;
 		            case 2: status = 'Cleaner'; break;
@@ -84,12 +244,21 @@
             });
 
             $.getJSON("/api/getStats", function (data) {
-                dataPoints1.length = 0;
+                dataPointsPower.length = 0;
+                dataPointsFlame.length = 0;
+                dataPointsTset.length = 0;
+                dataPointsTboiler.length = 0;
+                dataPointsThermostatStop.length = 0;
+
                 $.each(data, function (key, value) {
-                    dataPoints1.push({ x: Date.parse(value.Timestamp), y: value.Power });
+                    dataPointsPower.push({ x: Date.parse(value.Timestamp), y: value.Power });
+                    dataPointsFlame.push({ x: Date.parse(value.Timestamp), y: value.Flame });
+                    dataPointsTset.push({ x: Date.parse(value.Timestamp), y: value.Tset });
+                    dataPointsTboiler.push({ x: Date.parse(value.Timestamp), y: value.Tboiler });
+                    dataPointsThermostatStop.push({ x: Date.parse(value.Timestamp), y: value.ThermostatStop });
                 });
 
-                chart.render();
+                //chart.render();
             });
 		};
 
@@ -99,7 +268,6 @@
 		setInterval(function () { updateInfo() }, updateInterval);
 	}
     </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
 </head>
 <body>
     <!-- Nav tabs -->
@@ -142,7 +310,8 @@
         <div class="tab-pane" id="settings">...</div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
