--- a/index.html
+++ b/index.html
@@ -8,212 +8,66 @@
     <script type="text/javascript">
 	window.onload = function () {
 
-		// dataPoints
+	    // dataPoints
 	    var dataPointsPower = [];
 	    var dataPointsFlame = [];
 	    var dataPointsTset = [];
 	    var dataPointsTboiler = [];
 	    var dataPointsThermostatStop = [];
 
-	    $('#chartContainer').bind('mousemove touchmove touchstart', function (e) {
-	        var chart,
-                point,
-                i,
-                event;
-
-	        for (i = 0; i < Highcharts.charts.length; i = i + 1) {
-	            chart = Highcharts.charts[i];
-	            event = chart.pointer.normalize(e.originalEvent); // Find coordinates within the chart
-	            point = chart.series[0].searchPoint(event, true); // Get the hovered point
-
-	            if (point) {
-	                point.highlight(e);
+	    var chart = new Highcharts.chart('chartContainer', {
+	        title: {
+                text: null
+	        },
+	        xAxis: {
+	            type: 'datetime'
+	        },
+	        yAxis: [{
+	            title: {
+	                text: 'Temperature (°C)'
 	            }
-	        }
+	        }, {
+	            labels: {
+                    enabled: false
+	            },
+	            title: {
+	                text: null
+	            },
+                max: 4
+	        }],
+	        legend: {
+	            align: 'right',
+	            verticalAlign: 'bottom',
+	            borderWidth: 0
+	        },
+	        series: [{
+	            name: 'Power',
+	            type: 'line',
+	            yAxis: 1,
+	            data: dataPointsPower
+	        }, {
+	            name: 'Tset',
+	            type: 'line',
+	            yAxis: 0,
+	            data: dataPointsTset
+	        }, {
+	            name: 'Tboiler',
+	            type: 'line',
+	            yAxis: 0,
+	            data: dataPointsTboiler
+	        }]
 	    });
-	    /**
-         * Override the reset function, we don't need to hide the tooltips and crosshairs.
-         */
-	    Highcharts.Pointer.prototype.reset = function () {
-	        return undefined;
-	    };
-
-	    /**
-         * Highlight a point by showing tooltip, setting hover state and draw crosshair
-         */
-	    Highcharts.Point.prototype.highlight = function (event) {
-	        this.onMouseOver(); // Show the hover marker
-	        this.series.chart.tooltip.refresh(this); // Show the tooltip
-	        this.series.chart.xAxis[0].drawCrosshair(event, this); // Show the crosshair
-	    };
-
-	    /**
-         * Synchronize zooming through the setExtremes event handler.
-         */
-	    function syncExtremes(e) {
-	        var thisChart = this.chart;
-
-	        if (e.trigger !== 'syncExtremes') { // Prevent feedback loop
-	            Highcharts.each(Highcharts.charts, function (chart) {
-	                if (chart !== thisChart) {
-	                    if (chart.xAxis[0].setExtremes) { // It is null while updating
-	                        chart.xAxis[0].setExtremes(e.min, e.max, undefined, false, { trigger: 'syncExtremes' });
-	                    }
-	                }
-	            });
-	        }
-	    }
-
-	    // Get the data. The contents of the data file can be viewed at
-	    // https://github.com/highcharts/highcharts/blob/master/samples/data/activity.json
-	    $.getJSON('https://www.highcharts.com/samples/data/jsonp.php?filename=activity.json&callback=?', function (activity) {
-	        $.each(activity.datasets, function (i, dataset) {
-
-	            // Add X values
-	            dataset.data = Highcharts.map(dataset.data, function (val, j) {
-	                return [activity.xData[j], val];
-	            });
-
-	            $('<div class="chart">')
-                    .appendTo('#chartContainer')
-                    .highcharts({
-                        chart: {
-                            marginLeft: 40, // Keep all charts left aligned
-                            spacingTop: 20,
-                            spacingBottom: 20
-                        },
-                        title: {
-                            text: dataset.name,
-                            align: 'left',
-                            margin: 0,
-                            x: 30
-                        },
-                        credits: {
-                            enabled: false
-                        },
-                        legend: {
-                            enabled: false
-                        },
-                        xAxis: {
-                            crosshair: true,
-                            events: {
-                                setExtremes: syncExtremes
-                            },
-                            labels: {
-                                format: '{value} km'
-                            }
-                        },
-                        yAxis: {
-                            title: {
-                                text: null
-                            }
-                        },
-                        tooltip: {
-                            positioner: function () {
-                                return {
-                                    x: this.chart.chartWidth - this.label.width, // right aligned
-                                    y: -1 // align to title
-                                };
-                            },
-                            borderWidth: 0,
-                            backgroundColor: 'none',
-                            pointFormat: '{point.y}',
-                            headerFormat: '',
-                            shadow: false,
-                            style: {
-                                fontSize: '18px'
-                            },
-                            valueDecimals: dataset.valueDecimals
-                        },
-                        series: [{
-                            data: dataset.data,
-                            name: dataset.name,
-                            type: dataset.type,
-                            color: Highcharts.getOptions().colors[i],
-                            fillOpacity: 0.3,
-                            tooltip: {
-                                valueSuffix: ' ' + dataset.unit
-                            }
-                        }]
-                    });
-	        });
-	    });
-
-		//var chart = new CanvasJS.Chart("chartContainer",{
-		//	zoomEnabled: true,
-		//	title: {
-		//		text: ""
-		//	},
-		//	toolTip: {
-		//		shared: true
-		//	},
-		//	legend: {
-		//		verticalAlign: "top",
-		//		horizontalAlign: "center",
-        //                        fontSize: 14,
-		//		fontWeight: "bold",
-		//		fontFamily: "calibri",
-		//		fontColor: "dimGrey"
-		//	},
-		//	axisY: [{
-		//	    title: "1st Primary Y Axis"
-		//	}, {
-        //        title: "2nd Primary Y Axis"
-		//	}, {
-		//	    title: "3rd Primary Y Axis"
-		//	}],
-		//	data: [{
-		//		type: "line",
-		//		xValueType: "dateTime",
-		//		showInLegend: true,
-		//		name: "Power",
-		//		dataPoints: dataPointsPower
-		//	}, {
-		//	    type: "line",
-		//	    axisYIndex: 1,
-		//	    xValueType: "dateTime",
-		//	    showInLegend: true,
-		//	    name: "Flame",
-		//	    dataPoints: dataPointsFlame
-		//	}, {
-		//	    type: "line",
-		//	    axisYIndex: 2,
-		//	    xValueType: "dateTime",
-		//	    showInLegend: true,
-		//	    name: "Tset",
-		//	    dataPoints: dataPointsTset
-		//	}, {
-		//	    type: "line",
-		//	    axisYIndex: 2,
-		//	    xValueType: "dateTime",
-		//	    showInLegend: true,
-		//	    name: "Tboiler",
-		//	    dataPoints: dataPointsTboiler
-		//	}, {
-		//	    type: "line",
-		//	    xValueType: "dateTime",
-		//	    showInLegend: true,
-		//	    name: "ThermostatStop",
-		//	    dataPoints: dataPointsThermostatStop
-		//	}],
-        //    legend:{
-        //        cursor:"pointer",
-        //        itemclick : function(e) {
-        //        if (typeof(e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
-        //            e.dataSeries.visible = false;
-        //        }
-        //        else {
-        //            e.dataSeries.visible = true;
-        //        }
-        //        chart.render();
-        //        }
-        //    }
-		//});
 
 		var updateInterval = 5000;
 
 		var updateInfo = function () {
 		    $.getJSON("/api/getInfo", function (data) {
+		        if (typeof data.SwVer === "undefined") {
+		            $('#spFlame').text('');
+		            $('#spPower').text('');
+		            return;
+		        }
+
 		        $('#spFlame').text(data.Flame);
 
 		        var power = '';
@@ -251,14 +105,18 @@
                 dataPointsThermostatStop.length = 0;
 
                 $.each(data, function (key, value) {
-                    dataPointsPower.push({ x: Date.parse(value.Timestamp), y: value.Power });
-                    dataPointsFlame.push({ x: Date.parse(value.Timestamp), y: value.Flame });
-                    dataPointsTset.push({ x: Date.parse(value.Timestamp), y: value.Tset });
-                    dataPointsTboiler.push({ x: Date.parse(value.Timestamp), y: value.Tboiler });
-                    dataPointsThermostatStop.push({ x: Date.parse(value.Timestamp), y: value.ThermostatStop });
+                    dataPointsPower.push([ Date.parse(value.Timestamp), value.Power ]);
+                    dataPointsFlame.push([ Date.parse(value.Timestamp), value.Flame ]);
+                    dataPointsTset.push([ Date.parse(value.Timestamp), value.Tset ]);
+                    dataPointsTboiler.push([ Date.parse(value.Timestamp), value.Tboiler ]);
+                    dataPointsThermostatStop.push([ Date.parse(value.Timestamp), value.ThermostatStop ]);
                 });
 
-                //chart.render();
+
+                chart.series[0].setData(dataPointsPower, false);
+                chart.series[1].setData(dataPointsTset, false);
+                chart.series[2].setData(dataPointsTboiler, false);
+                chart.redraw();
             });
 		};
 
