--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	    var dataPointsPower = [];
 	    var dataPointsFlame = [];
 	    var dataPointsTset = [];
-	    var dataPointsTboiler = [];
+        var dataPointsTboiler = [];
+        var dataPointsFFWorkTime = [];
 
 	    Highcharts.setOptions({
 	        global: {
