--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         var dataPointsFlame = [];
         var dataPointsTset = [];
         var dataPointsTboiler = [];
+        var dataPointsThermostatStop = [];
         var dataPointsFFWorkTime = [];
 
         Highcharts.setOptions({
@@ -55,22 +56,22 @@
             },
             series: [{
                 name: 'Tset',
-                type: 'spline',
+                type: 'line',
                 color: 'blue',
                 shadow: {
                     color: 'gray',
-                    width: 10,
+                    width: 5,
                     offsetX: 0,
                     offsetY: 0
                 },
                 data: dataPointsTset
             }, {
                 name: 'Tboiler',
-                type: 'spline',
+                type: 'line',
                 color: 'red',
                 shadow: {
                     color: 'gray',
-                    width: 10,
+                    width: 5,
                     offsetX: 0,
                     offsetY: 0
                 },
@@ -82,7 +83,7 @@
                 color: 'orange',
                 shadow: {
                     color: 'gray',
-                    width: 10,
+                    width: 5,
                     offsetX: 0,
                     offsetY: 0
                 },
@@ -93,6 +94,12 @@
                 yAxis: 1,
                 color: 'darkorange',
                 data: dataPointsPower
+            }, {
+                name: 'Thermostat',
+                type: 'line',
+                yAxis: 1,
+                color: 'black',
+                data: dataPointsThermostatStop
             }]
         });
 
@@ -105,7 +112,7 @@
             },
             yAxis: [{
                 title: {
-                    text: 'FF work time (s)'
+                    text: 'Consumption (kg)'
                 },
                 min: 0
             }],
@@ -115,12 +122,12 @@
                 borderWidth: 0
             },
             series: [{
-                name: 'FF work time',
+                name: 'Consumption (kg)',
                 type: 'column',
                 color: 'black',
                 shadow: {
                     color: 'gray',
-                    width: 10,
+                    width: 5,
                     offsetX: 0,
                     offsetY: 0
                 },
@@ -128,20 +135,20 @@
             }]
         });
 
-        var updateInterval = 5000;
+        var updateInterval = 10000;
 
         var updateInfo = function () {
             $.getJSON("/api/getInfo", function (data) {
-                if (typeof data.SwVer === "undefined") {
+                if (data == null || data.length == 0 || typeof data[0].SwVer === "undefined") {
                     $('#spFlame').text('');
                     $('#spPower').text('');
                     return;
                 }
 
-                $('#spFlame').text(data.Flame);
+                $('#spFlame').text(data[0].Flame);
 
                 var power = '';
-                switch (data.Power) {
+                switch (data[0].Power) {
                     case 0: power = ''; break;
                     case 1: power = 'Suspend'; break;
                     case 2: power = 'Power 1'; break;
@@ -150,7 +157,7 @@
                 };
 
                 var status = '';
-                switch (data.Status) {
+                switch (data[0].Status) {
                     case 0: status = 'Idle'; break;
                     case 1: status = 'Fan Cleaning'; break;
                     case 2: status = 'Cleaner'; break;
@@ -172,18 +179,21 @@
                 dataPointsFlame.length = 0;
                 dataPointsTset.length = 0;
                 dataPointsTboiler.length = 0;
+                dataPointsThermostatStop.length = 0;
 
                 $.each(data, function (key, value) {
                     dataPointsPower.push([ Date.parse(value.Timestamp), value.Power ]);
                     dataPointsFlame.push([ Date.parse(value.Timestamp), value.Flame ]);
                     dataPointsTset.push([ Date.parse(value.Timestamp), value.Tset ]);
                     dataPointsTboiler.push([ Date.parse(value.Timestamp), value.Tboiler ]);
+                    dataPointsThermostatStop.push([ Date.parse(value.Timestamp), value.ThermostatStop * 5 ]);
                 });
 
                 chart.series[0].setData(dataPointsTset, false);
                 chart.series[1].setData(dataPointsTboiler, false);
                 chart.series[2].setData(dataPointsFlame, false);
                 chart.series[3].setData(dataPointsPower, false);
+                chart.series[4].setData(dataPointsThermostatStop, false);
                 chart.redraw();
             });
 
@@ -191,8 +201,13 @@
                 dataPointsFFWorkTime.length = 0;
 
                 $.each(data, function (key, value) {
-                    dataPointsFFWorkTime.push([ Date.parse(value.Timestamp), value.FFWorkTime ]);
+                    dataPointsFFWorkTime.push([ Date.parse(value.Timestamp), (Math.round(value.FFWorkTime * 0.0101 * 100) / 100) ]);
                 });
+
+                if (dataPointsFFWorkTime.length > 0) {
+                    $('#spConsumption').text(dataPointsFFWorkTime[dataPointsFFWorkTime.length - 1][1] + ' kg / 24h');
+                    dataPointsFFWorkTime.pop();
+                }
 
                 consumptionChart.series[0].setData(dataPointsFFWorkTime, false);
                 consumptionChart.redraw();
@@ -224,10 +239,13 @@
                             <div class="panel-body">
                                 <div class="row">
                                     <div class="col">
-                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span> <span id="spFlame" style="padding-left:10px">Flame</span></button>
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-fire"></span> <span id="spFlame" style="padding-left:10px"> </span></button>
                                     </div>
                                     <div class="col">
-                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-signal"></span> <span id="spPower" style="padding-left:10px">Power</span></button>
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-signal"></span> <span id="spPower" style="padding-left:10px"> </span></button>
+                                    </div>
+                                    <div class="col">
+                                        <button type="button" class="btn btn-default btn-md btn-block" style="text-align:left; padding-left:20px"><span class="glyphicon glyphicon-scale"></span> <span id="spConsumption" style="padding-left:10px">0.00 kg / 24h</span></button>
                                     </div>
                                 </div>
                             </div>
@@ -235,7 +253,7 @@
                     </div>
                     <div class="col-sm-9">
                         <div class="panel panel-default">
-                            <div class="panel-heading">Last 2 hours</div>
+                            <div class="panel-heading">Last 6 hours</div>
                             <div class="panel-body">
                                 <div id="chartContainer" style="height: 400px; width: 100%;"></div>
                             </div>
